[gd_scene load_steps=5 format=3 uid="uid://dlyrq6dk8k6a8"]

[ext_resource type="Texture2D" uid="uid://dkubgdbfh1fv5" path="res://assets/PNG/Default size/barrelGreen_top.png" id="1_a38py"]
[ext_resource type="Script" path="res://objects/barrel/barrel.gd" id="1_ee6rb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gwlvu"]
rough = true

[sub_resource type="CircleShape2D" id="CircleShape2D_ehf2q"]

[node name="Barile" type="RigidBody2D"]
collision_layer = 8
collision_mask = 15
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_gwlvu")
gravity_scale = 0.0
script = ExtResource("1_ee6rb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_a38py")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ehf2q")

[node name="TimerExplosion" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="hitted" from="." to="." method="_on_hitted"]
[connection signal="timeout" from="TimerExplosion" to="." method="_on_timer_explosion_timeout"]
